# mypermobil

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
example/: example_auth.py  example_construct.py  example_region.py
mypermobil/: __init__.py  const.py  exceptions.py  mypermobil.py
tests/: auth_test.py  item_test.py  misc_test.py  region_test.py  requests_test.py  validation_test.py
