[metadata]
name = mypermobil
version = 0.1.4
author = Isak Nyberg
author_email = isak@nyberg.dev
description = A python wrapper for a subset of the MyPermobil API
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/IsakNyberg/MyPermobil-API
project_urls =
    Bug Tracker = https://github.com/IsakNyberg/MyPermobil-API/issues
    repository = https://github.com/IsakNyberg/MyPermobil-API


[options]
package_dir =
    = .
packages = ["mypermobil"]
python_requires = >=3.6

[options.packages.find]
where = .
